...
                    .foregroundStyle(Color.white)
                    .clipShape(.capsule)
                    .opacity(userInfo.QuizAnswers[questionNum] == userInfo.QuizQuestions[questionNum].answerA  || userInfo.QuizAnswers[questionNum] == nil ? 1.0 : 0.7)
                    .scaleEffect(userInfo.QuizAnswers[questionNum] == userInfo.QuizQuestions[questionNum].answerB  || userInfo.QuizAnswers[questionNum] == nil ? 0.8 : 1.0)
                    Button(userInfo.QuizQuestions[questionNum].answerB.answer, action: {
                        userInfo.QuizAnswers[questionNum] = userInfo.QuizQuestions[questionNum].answerB
                    }).accessibilityIdentifier("buttonB")
                    .padding()
                    .frame(width: 300, height: 125, alignment: .center)
                    .background(userInfo.QuizQuestions[questionNum].answerB.type.backgroundColor)
                    .foregroundStyle(Color.white)
                    .clipShape(.capsule)
                    .opacity(userInfo.QuizAnswers[questionNum] == userInfo.QuizQuestions[questionNum].answerB || userInfo.QuizAnswers[questionNum] == nil ? 1.0 : 0.7)
...
                    }, label: {
                        Text("Submit")
                    })
                    .padding()
                    .foregroundStyle(Color.accentColor)
                    .disabled(userInfo.QuizAnswers[questionNum] == nil)
                    .accessibilityIdentifier("submit")
                    Spacer()
                }
                Button {
                    if(questionNum < quizIndex) {
                        questionNum+=1
                    }
...
